--- a/package.xml
+++ b/package.xml
@@ -13,10 +13,10 @@
   <email>isaac@silverorange.com</email>
   <active>yes</active>
  </lead>
- <date>2016-02-08</date>
- <time>12:00:25</time>
+ <date>2016-02-19</date>
+ <time>16:13:23</time>
  <version>
-  <release>1.3.2so3</release>
+  <release>1.3.3</release>
   <api>1.3.2</api>
  </version>
  <stability>
@@ -48,14 +48,14 @@ MailChimp API version 1.3.2
  <changelog>
   <release>
    <version>
-    <release>1.3.2so3</release>
+    <release>1.3.3</release>
     <api>1.3.2</api>
    </version>
    <stability>
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2016-02-08</date>
+   <date>2016-02-19</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
 MailChimp API version 1.3.2
